# stableDefussion-App

api/: pyproject.toml
api/api/: .env  app.py
frontend/aiapp/: package-lock.json  package.json
frontend/aiapp/src/: App.jsx  index.css
